--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,11 +152,13 @@ jobs:
       - name: List downloaded wheels
         run: find dist -name "*.whl" | xargs ls -la
   
-      - name: Publish using maturin-action
-        uses: messense/maturin-action@v1
-        with:
-          maturin-version: latest
-          command: upload
-          args: --skip-existing --username __token__ --password ${{ secrets.PYPI_TOKEN }}
+      - name: Install twine
+        run: pip install twine
+  
+      - name: Publish to PyPI
+        run: |
+          echo "上传所有 wheel 文件到 PyPI..."
+          find dist -name "*.whl" -exec twine upload --skip-existing {} \;
         env:
-          MATURIN_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
